# x-tools

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  test_ass.py
.agent/workflows/: dev.md
.github/workflows/: build-push.yml  ci.yml
.streamlit/: config.toml
images/group1/: captions.txt
images/group2/: captions.txt
images/group3/: captions.txt
menus/: __init__.py  _prompts.py  add_watermark.py  audio_video.py  clean.py  convert.py  interpolate.py  media_ops.py  mv.py  pdf_split.py  selftest.py  slideshow.py  subtitle.py  tts.py  upscale.py  watermark.py
modules/: __init__.py  futures.py  market_cn.py  market_us.py
scripts/: generate_filter_preview.py  run_demo.py
tests/: test_common.py  test_config.py  test_ffmpeg_core.py  test_pdf_split.py  test_slideshow.py  test_subtitle.py
tools/: __init__.py  common.py
tools/add_watermark/: __init__.py  batch.py  image_watermark.py  text_watermark.py
tools/bgm/: ffmpeg_bgm.py
tools/compress/: batch.py  ffmpeg_compress.py
tools/concat/: __init__.py  ffmpeg_concat.py
tools/convert/: __init__.py  batch.py  ffmpeg_convert.py
tools/crop/: __init__.py  batch.py  ffmpeg_crop.py
tools/extract/: __init__.py  batch.py  clip_extractor.py  keyframe_extractor.py
tools/ffmpeg/: ffmpeg_core.py
tools/filter/: __init__.py  batch.py  ffmpeg_filter.py
tools/interpolation/: __init__.py  batch.py  ffmpeg_minterp.py  rife.py
tools/mediainfo/: __init__.py  probe.py
tools/mv/: __init__.py  beat_detector.py  generator.py  parser.py  renderer.py
(+23 files in other folders)
