[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x-tools"
version = "0.2.0"
description = "视频处理工具箱 — 去水印、加水印、超分、插帧、关键帧提取"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "Pillow>=10.0.0",
    "deep-translator>=1.11.0",
    "pypdf>=4.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.scripts]
x-tools = "main:main"

[tool.setuptools.packages.find]
include = ["tools*", "menus*", "config"]

[tool.setuptools]
py-modules = ["config", "main"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
